--- a/Source/DotSpatial.Projections/DotSpatial.Projections.csproj
+++ b/Source/DotSpatial.Projections/DotSpatial.Projections.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;net462</TargetFrameworks>
+    <TargetFrameworks>net46;net461;net462</TargetFrameworks>
     <Product>gis coordinate system conveter</Product>
     <Company />
     <Authors>Lorenzo Delana</Authors>
@@ -12,6 +12,10 @@
     <RepositoryUrl />
     <PackageTags>c# gis crs</PackageTags>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net461|AnyCPU'">
+    <DocumentationFile>bin\Release\net461\DotSpatial.Projections.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
